# UnrealProjectTool

./: CMakeLists.txt  CommonData.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
SubUI/: UpdatePlugins.ui
SubUI/Common/: generateuproject.cpp  generateuproject.h  generateuproject.ui
SubUI/UpdatePlugins/: gitpathlistwidgetitem.cpp  gitpathlistwidgetitem.h  gitpathlistwidgetitem.ui  updateplugindialogue.cpp  updateplugindialogue.h  updateplugindialogue.ui  updatepluginprocessdialogue.cpp  updatepluginprocessdialogue.h  updatepluginprocessdialogue.ui
Util/: applicationsettings.cpp  applicationsettings.h  gitoperationtool.cpp  gitoperationtool.h  unrealhelper.cpp  unrealhelper.h
